Mejoras para proxima charla

--- a/slides/index.html
+++ b/slides/index.html
@@ -92,7 +92,7 @@
 							<span class="alignright">
 								<a href="https://github.com/jdonsan/charla-aprendiendo-vuejs" target="_blank">
 									<svg class="fa-twitter">
-									<use xlink:href="#fa-twitter"></use>
+										<use xlink:href="#fa-twitter"></use>
 									</svg>
 									@jdonsan
 								</a>
@@ -126,8 +126,10 @@
 								<li>
 									<strong class="text-label">Email:</strong> jose.dongil@gmail.com</sup>
 								</li>
-								<li><strong class="text-label">Twitter:</strong> @jdonsan</li>
-								<li><strong class="text-label">Website:</strong> el.abismo = de[null]</li>
+								<li>
+									<strong class="text-label">Twitter:</strong> @jdonsan</li>
+								<li>
+									<strong class="text-label">Website:</strong> el.abismo = de[null]</li>
 							</ul>
 							<p>
 								Desarrollando se vive mejor
@@ -142,14 +144,17 @@
 				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE I</p>
-					<h2><strong class="bg-light">INTRODUCCIÓN</strong></h2>
+					<h2>
+						<strong class="bg-light">INTRODUCCIÓN</strong>
+					</h2>
 				</div>
 			</section>
 
 			<!-- Slide: ¿Otro framework más? ¿Por qué? -->
 			<section>
 				<div class="wrap aligncenter">
-					<h2>¿Otro <strong class="bg-light">framework</strong> más?</h2>
+					<h2>¿Otro
+						<strong class="bg-light">framework</strong> más?</h2>
 					<img class="size-70" src="static/images/frameworks.png" alt="¿otro framework?" />
 				</div>
 			</section>
@@ -157,14 +162,18 @@
 			<!-- Slide: ¿Framework progresivo? -->
 			<section>
 				<div class="wrap aligncenter">
-					<h2>Puedo incluir funcionalidad de forma <strong class="bg-light">progresiva</strong></h2>
+					<h2>Puedo incluir funcionalidad de forma
+						<strong class="bg-light">progresiva</strong>
+					</h2>
 					<img class="size-70" src="static/images/plataforma-vue-1.png" alt="Plataforma Vue">
 				</div>
 			</section>
 
 			<section>
 				<div class="wrap aligncenter">
-					<h2>En la charla nos centraremos en <strong class="bg-light">SPA Medias</strong></h2>
+					<h2>En la charla nos centraremos en
+						<strong class="bg-light">SPA Medias</strong>
+					</h2>
 					<img class="size-70" src="static/images/plataforma-vue-2.png" alt="Plataforma Vue">
 				</div>
 			</section>
@@ -172,7 +181,9 @@
 			<!-- Slide: ¿Arbol de componentes? -->
 			<section class="bg-white">
 				<div class="wrap aligncenter">
-					<h2>Nuestra web como un <strong class="bg-light">árbol de componentes</strong></h2>
+					<h2>Nuestra web como un
+						<strong class="bg-light">árbol de componentes</strong>
+					</h2>
 					<img class="size-70" src="static/images/components.png" alt="Arbol de componentes">
 				</div>
 			</section>
@@ -180,7 +191,9 @@
 			<!-- Slide: ¿Reactivo? -->
 			<section class="bg-white">
 				<div class="wrap aligncenter">
-					<h2>El sistema trabaja de forma <strong class="bg-light">reactiva</strong></h2>
+					<h2>El sistema trabaja de forma
+						<strong class="bg-light">reactiva</strong>
+					</h2>
 					<div style="margin-top: 3rem;">
 						<video autoplay loop>
 							<source src="static/gifs/reactive.mp4" type="video/mp4">
@@ -190,27 +203,35 @@
 			</section>
 
 			<!-- Slide: Y qué más? -->
-			<section class="bg-white">
-				<div class="wrap">
-					<h2>¿ Y qué <strong class="bg-light">más</strong>?</h2>
-					<ul class="flexblock steps">
-						<li>
-							<h2>01. Sin manipular DOM</h2>
-							<p>Componentes data driven. Tú te encargas de definir el módelo y donde debe pintar y Vue se encarga del resto</p>
-						</li>
-						<li>
-							<div class="process step-2"></div>
+			<section>
+				<div class="wrap aligncenter">
+					<h2>
+						Compagina 2 tipos de
+						<strong class="bg-light">Data Binding</strong>
+					</h2>
+					<img src="static/images/binding.png" alt="Tipos de binding en Vue">
+				</div>
+			</section>
 
-							<h2>02. Renderiza rápido gracias al Virtual DOM</h2>
-							<p>Mantiene una copia en caché del DOM y decide cuáles los cambios mínimos sobre el DOM real</p>
-						</li>
-						<li>
-							<div class="process step-3"></div>
+			<section>
+				<div class="wrap aligncenter">
+					<h2>
+						Utiliza
+						<strong class="bg-light">Virtual DOM</strong>
+					</h2>
+					<img class="size-70" src="static/images/vdom.png" alt="Virtual Dom">
+				</div>
+			</section>
 
-							<h2>03. Sin dependencias, escribe HTML, CSS y JS</h2>
-							<p>No es nada intrusivo en el flujo de trabajo convencional de cualquier front</p>
-						</li>
-					</ul>
+			<section>
+				<div class="wrap aligncenter">
+					<h1>
+						Sin dependencias, escribe
+						<strong class="bg-light">HTML, CSS y JS</strong>
+					</h1>
+					<p class="text-intro">
+						No es nada intrusivo en el flujo de trabajo convencional de cualquier front
+					</p>
 				</div>
 			</section>
 
@@ -219,7 +240,9 @@
 				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE II</p>
-					<h2><strong class="bg-light">PRACTIQUEMOS UN POCO</strong></h2>
+					<h2>
+						<strong class="bg-light">PRACTIQUEMOS UN POCO</strong>
+					</h2>
 				</div>
 			</section>
 
@@ -233,7 +256,8 @@
 
 			<section>
 				<div class="wrap">
-					<h2><strong class="bg-light">Herramientas necesarias</strong> para una SPA media</h2>
+					<h2>
+						<strong class="bg-light">Herramientas necesarias</strong> para una SPA media</h2>
 
 					<ul class="flexblock features">
 						<li>
@@ -264,14 +288,16 @@
 			<!-- Slide: Estructura de ficheros -->
 			<section>
 				<div class="wrap aligncenter">
-					<img class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
+					<img style="margin-top: -5rem;" class="size-50" src="static/images/files-vue.png" alt="Ficheros proyecto de Vue">
 				</div>
 			</section>
 
 			<!-- Slide: Fichero raiz -->
 			<section>
 				<div class="wrap aligncenter">
-					<h2>Nuestra Webapp empieza por <strong class="bg-light">MAIN.JS</strong></h2>
+					<h2>Nuestra Webapp empieza por
+						<strong class="bg-light">MAIN.JS</strong>
+					</h2>
 					<br>
 					<pre>
 					import Vue from 'vue';
@@ -289,13 +315,13 @@
 			<!-- Slide: Estructura de mi aplicación -->
 			<section>
 				<div class="wrap aligncenter">
-					<img class="size-70" src="static/images/arbol-componentes.png" alt="Estructura de aplicación">
+					<img style="margin-top: -5rem;" class="size-70" src="static/images/arbol-componentes.png" alt="Estructura de aplicación">
 				</div>
 			</section>
 
 			<section>
 				<div class="wrap aligncenter">
-					<img class="size-70" src="static/images/search-box-componente.png" alt="Ficheros proyecto de Vue">
+					<img style="margin-top: -5rem;" class="size-70" src="static/images/search-box-componente.png" alt="Ficheros proyecto de Vue">
 				</div>
 			</section>
 
@@ -311,7 +337,8 @@
 			<!-- Slide: Templates y directivas -->
 			<section>
 				<div class="wrap aligncenter">
-					<h2><strong class="bg-light">Elementos</strong> de un template</h2>
+					<h2>
+						<strong class="bg-light">Elementos</strong> de un template</h2>
 					<ul class="flexblock features">
 						<li>
 							<div>
@@ -341,8 +368,12 @@
 
 			<section>
 				<div class="wrap aligncenter">
-					<h2><strong class="bg-light">Ejemplo</strong></h2>
-					<p><code>Pintar películas si existen resultados</code></p>
+					<h2>
+						<strong class="bg-light">Ejemplo</strong>
+					</h2>
+					<p>
+						<code>Pintar películas si existen resultados</code>
+					</p>
 					<pre>
 &lt;template&gt;
 	&lt;subpanel v-if="movies"&gt;
@@ -367,25 +398,16 @@
 				</div>
 			</section>
 
-			<!-- Slide: Estado y métodos -->
+			<!-- Slide: Estado, métodos y computed -->
 			<section>
-				<div class="wrap">
-					<h2><strong class="bg-light">Elementos</strong> de la instancia del componente</h2>
-
-					<ul class="flexblock features">
-						<li>
-							<div>
-								<h2>Los datos</h2>
-								Estado interno de un componente. Son reactivos y mutables. Para nosotros son un objeto plano. Ayudan como esquema interno.
-							</div>
-						</li>
-						<li>
-							<div>
-								<h2>Los métodos</h2>
-								Son funciones que manejan los eventos disparados por el usuario.
-							</div>
-						</li>
-					</ul>
+				<div class="wrap content-center">
+					<h2>Elementos de un componente</h2>
+					<h3>
+						<strong class="bg-light">DATA</strong>
+					</h3>
+					<p class="text-intro">
+						Estado interno de un componente. Son reactivos y mutables. Para nosotros son un objeto plano. Ayudan como esquema interno
+					</p>
 				</div>
 			</section>
 
@@ -397,6 +419,18 @@
 				</div>
 			</section>
 
+			<section>
+				<div class="wrap content-center">
+					<h2>Elementos de un componente</h2>
+					<h3>
+						<strong class="bg-light">METHODS</strong>
+					</h3>
+					<p class="text-intro">
+						Son funciones que manejan los eventos disparados por el usuario
+					</p>
+				</div>
+			</section>
+
 			<section class="fullscreen">
 				<div class="embed">
 					<video autoplay loop controls>
@@ -405,10 +439,23 @@
 				</div>
 			</section>
 
+			<section>
+				<div class="wrap content-center">
+					<h1>Elementos de un componente</h1>
+					<h2>
+						<strong class="bg-light">COMPUTED</strong>
+					</h2>
+					<h3 class="text-intro">
+						Propiedades que reacciona a cambios realizados en el estado
+					</h3>
+				</div>
+			</section>
+
 			<!-- Slide: Comunicación de componentes -->
 			<section>
 				<div class="wrap aligncenter">
-					<h2><strong class="bg-light">Comunicación</strong> entre componentes</h2>
+					<h2>
+						<strong class="bg-light">Comunicación</strong> entre componentes</h2>
 					<img class="size-50" src="static/images/comunication.png" alt="Comunicacion en componentes de vue">
 				</div>
 			</section>
@@ -431,14 +478,17 @@
 
 			<section>
 				<div class="wrap aligncenter">
-					<h2><strong class="bg-light">Propiedades</strong> y <strong class="bg-light">Estados</strong></h2>
+					<h2>
+						<strong class="bg-light">Propiedades</strong> y
+						<strong class="bg-light">Estados</strong>
+					</h2>
 					<img class="size-50" src="static/images/flow-vue.png" alt="Comunicacion en componentes de vue">
 				</div>
 			</section>
 
 			<section>
 				<div class="wrap aligncenter">
-					<img class="size-70" src="static/images/vistas-componentes.png" alt="Ficheros proyecto de Vue">
+					<img style="margin-top: -5rem;" class="size-70" src="static/images/vistas-componentes.png" alt="Ficheros proyecto de Vue">
 				</div>
 			</section>
 
@@ -469,14 +519,17 @@
 				<span class="background dark" style="background-image:url('static/images/bg/bloc.jpg')"></span>
 				<div class="wrap size-60">
 					<p class="text-context">BLOQUE III</p>
-					<h2><strong class="bg-light">CONCLUSIONES</strong></h2>
+					<h2>
+						<strong class="bg-light">CONCLUSIONES</strong>
+					</h2>
 				</div>
 			</section>
 
 			<!-- Slide: Lo que NO me gusta de VueJS -->
 			<section class="bg-white">
 				<div class="wrap">
-					<h2>Lo que <strong class="bg-secondary">NO</strong> me gusta</h2>
+					<h2>Lo que
+						<strong class="bg-secondary">NO</strong> me gusta</h2>
 					<ul class="flexblock steps">
 						<li>
 							<h2>01. No Web Components</h2>
@@ -501,7 +554,8 @@
 			<!-- Slide: Lo que SI me gusta de VueJS -->
 			<section>
 				<div class="wrap">
-					<h2>Lo que <strong class="bg-primary">SÍ</strong> me gusta</h2>
+					<h2>Lo que
+						<strong class="bg-primary">SÍ</strong> me gusta</h2>
 					<ul class="flexblock steps">
 						<li>
 							<h2>01. API intuitiva</h2>
@@ -532,7 +586,9 @@
 			<!-- Slide: Recursos -->
 			<section class="bg-white">
 				<div class="wrap aligncenter">
-					<h2>Si te apetece saber más, apunta estos <strong class="bg-light">recursos</strong></h2>
+					<h2>Si te apetece saber más, apunta estos
+						<strong class="bg-light">recursos</strong>
+					</h2>
 					<div class="content-center">
 						<ul class="flexblock specs">
 							<li>
@@ -542,8 +598,8 @@
 									</svg>
 									<h2>Awesome VueJS</h2>
 									<a href="https://github.com/vuejs/awesome-vue" alt="Awesome VueJS" target="_blank">
-									Enlace oficial
-								</a>
+										Enlace oficial
+									</a>
 								</div>
 							</li>
 							<li>
@@ -553,8 +609,8 @@
 									</svg>
 									<h2>Curso de VueJS y Firebase de Juan Andrés Núñez</h2>
 									<a href="http://wmedia.teachable.com/p/aprende-vue2-y-firebase-paso-a-paso" alt="Curso de VueJS" target="_blank">
-									Listado de vídeos
-								</a>
+										Listado de vídeos
+									</a>
 								</div>
 							</li>
 							<li>
@@ -564,8 +620,8 @@
 									</svg>
 									<h2>Learning VueJS</h2>
 									<a href="https://www.amazon.es/dp/1786469944?tag=pymlk3g3kr-20" alt="Libro de VueJS" target="_blank">
-									Página oficial
-								</a>
+										Página oficial
+									</a>
 
 								</div>
 							</li>
@@ -592,7 +648,7 @@
 							<span class="alignright">
 								<a href="https://github.com/jdonsan/charla-aprendiendo-vuejs" target="_blank">
 									<svg class="fa-twitter">
-									<use xlink:href="#fa-twitter"></use>
+										<use xlink:href="#fa-twitter"></use>
 									</svg>
 									@jdonsan
 								</a>
