Cambios para proxima charla

--- a/slides/index.html
+++ b/slides/index.html
@@ -255,24 +255,24 @@
 			</section>
 
 			<section>
-				<div class="wrap">
+				<div class="wrap content-center">
+					<h1>Instalamos</h1>
+					<br><br>
 					<h2>
-						<strong class="bg-light">Herramientas necesarias</strong> para una SPA media</h2>
-
-					<ul class="flexblock features">
-						<li>
-							<div>
-								<h2>Instalar NODE JS</h2>
-								<code>https://nodejs.org/es/</code>
-							</div>
-						</li>
-						<li>
-							<div>
-								<h2>Instalar vue-cli</h2>
-								<code>$ npm install vue-cli -g</code>
-							</div>
-						</li>
-					</ul>
+						<strong class="bg-light">1</strong>
+					</h2>
+					<h3 class="text-intro">
+						NodeJS
+						<code>https://nodejs.org</code>
+					</h3>
+					<br><br><br><br>
+					<h2>
+						<strong class="bg-light">2</strong>
+					</h2>
+					<h3 class="text-intro">
+						vue-cli
+						<code>$ npm install vue-cli -g</code>
+					</h3>
 				</div>
 			</section>
 
