--- a/slides/index.html
+++ b/slides/index.html
@@ -558,6 +558,16 @@ showPanel(
 
 			<section>
 				<div class="wrap aligncenter">
+					<h2>
+						¿Cómo <strong class="bg-light">reutilizo</strong>
+						lógica entre componentes?
+					</h2>
+					<h3>Con <strong class="bg-light">MIXINS</strong></h3>
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
 					<img style="margin-top: -5rem;" class="size-70" src="static/images/vistas-componentes.png" alt="Ficheros proyecto de Vue">
 				</div>
 			</section>
