--- a/slides/index.html
+++ b/slides/index.html
@@ -404,11 +404,10 @@
 
 			<!-- Slide: Estado, métodos y computed -->
 			<section>
-				<div class="wrap content-center">
-					<h2>Elementos de un componente</h2>
-					<h3>
+				<div class="wrap aligncenter">
+					<h2>
 						<strong class="bg-light">DATA</strong>
-					</h3>
+					</h2>
 					<p class="text-intro">
 						Estado interno de un componente. Son reactivos y mutables. Para nosotros son un objeto plano. Ayudan como esquema interno
 					</p>
@@ -424,11 +423,10 @@
 			</section>
 
 			<section>
-				<div class="wrap content-center">
-					<h2>Elementos de un componente</h2>
-					<h3>
+				<div class="wrap aligncenter">
+					<h2>
 						<strong class="bg-light">METHODS</strong>
-					</h3>
+					</h2>
 					<p class="text-intro">
 						Son funciones que manejan los eventos disparados por el usuario
 					</p>
@@ -444,14 +442,13 @@
 			</section>
 
 			<section>
-				<div class="wrap content-center">
-					<h1>Elementos de un componente</h1>
+				<div class="wrap aligncenter">
 					<h2>
 						<strong class="bg-light">COMPUTED</strong>
 					</h2>
-					<h3 class="text-intro">
+					<p class="text-intro">
 						Propiedades que reacciona a cambios realizados en el estado
-					</h3>
+					</p>
 				</div>
 			</section>
 
@@ -491,8 +488,7 @@
 			</section>
 
 			<section>
-				<div class="wrap content-center">
-					<h1>Elementos de un componente</h1>
+				<div class="wrap aligncenter">
 					<h2>
 						<strong class="bg-light">SLOT</strong>
 					</h2>
