Cambio en el cover

--- a/slides/index.html
+++ b/slides/index.html
@@ -82,9 +82,9 @@
 					<h1 class="text-landing text-shadow">
 						<strong class="bg-light">Aprendiendo VueJS</strong>
 					</h1>
-					<p class="text-shadow">
-						Un ejemplo práctico de cómo usarlo
-					</p>
+					<h3 class="text-shadow">
+						<strong>Un ejemplo práctico de cómo usarlo</strong>
+					</h3>
 				</div>
 				<footer>
 					<div class="wrap">
