Video de computed

--- a/slides/index.html
+++ b/slides/index.html
@@ -452,6 +452,14 @@
 				</div>
 			</section>
 
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop controls>
+						<source src="static/videos/computed.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
 			<!-- Slide: Comunicación de componentes -->
 			<section>
 				<div class="wrap aligncenter">
@@ -495,6 +503,12 @@
 					<h3>
 						Permite crear componentes cuya etiqueta HTML es de tipo bloque
 					</h3>
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
+					<img style="margin-top: -5rem;" class="size-70" src="static/images/panel-componente.png" alt="Ficheros proyecto de Vue">
 				</div>
 			</section>
 
@@ -559,6 +573,12 @@ showPanel(
 						lógica entre componentes?
 					</h2>
 					<h3>Con <strong class="bg-light">MIXINS</strong></h3>
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
+					<img style="margin-top: -5rem;" class="size-70" src="static/images/reutilizacion-mixin.png" alt="Ficheros proyecto de Vue">
 				</div>
 			</section>
 
