--- a/slides/index.html
+++ b/slides/index.html
@@ -512,6 +512,14 @@
 				</div>
 			</section>
 
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop controls>
+						<source src="static/videos/slot.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
 			<section>
 				<div class="wrap">
 					<div class="grid">
@@ -577,6 +585,24 @@ showPanel(
 			<section>
 				<div class="wrap aligncenter">
 					<img style="margin-top: -5rem;" class="size-70" src="static/images/reutilizacion-mixin.png" alt="Ficheros proyecto de Vue">
+				</div>
+			</section>
+
+			<section class="fullscreen">
+				<div class="embed">
+					<video autoplay loop controls>
+						<source src="static/videos/mixin.mp4" type="video/mp4">
+					</video>
+				</div>
+			</section>
+
+			<section>
+				<div class="wrap aligncenter">
+					<h2>
+						¿Cómo <strong class="bg-light">escalo</strong>
+						la aplicación con diferentes pantallas?
+					</h2>
+					<h3>Con <strong class="bg-light">VUE-ROUTER</strong></h3>
 				</div>
 			</section>
 
